[gd_scene load_steps=3 format=3 uid="uid://cwo1nka4q2pks"]

[ext_resource type="Script" uid="uid://377po2tylgdp" path="res://scenes/ui/menus/MainMenu/main_menu.gd" id="1_vjtqc"]
[ext_resource type="Script" uid="uid://c3v6ihn0ngusp" path="res://component/ui/sfx/UiSoundComponent.gd" id="2_chcjj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjtqc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 2.0
offset_right = 663.0
offset_bottom = 646.0
alignment = 1

[node name="BtnStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="BtnSound" type="Node" parent="VBoxContainer/BtnStart"]
script = ExtResource("2_chcjj")

[node name="BtnSettings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="BtnSound" type="Node" parent="VBoxContainer/BtnSettings"]
script = ExtResource("2_chcjj")

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="BtnSound" type="Node" parent="VBoxContainer/BtnQuit"]
script = ExtResource("2_chcjj")
